[tool.poetry]
name = "pbd-3725"
version = "0.1.0"
description = "Output for the PBD-3725 spike"
authors = ["Dave Randall <19395688+daveygit2050@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "pbd_3725"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.1"
PyYAML = "^6.0"

[tool.poetry.scripts]
get-artifactory-creds = 'pbd_3725:run_cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
